# bitcoin-script

./: Cargo.toml  README.md
src/: main.rs
static/: Ordinals.md
