[package]
name = "bitcoin-script"
version = "0.1.0"
authors = ["zilong-dai"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitcoin = { version = "0.32.0", features = ["serde", "bitcoinconsensus"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10.8"
hex = "0.4"
# bp-consensus = "=0.10.11"
